// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetailHeader/> default properties 1`] = `
<div
  className="page-header"
>
  <div
    className="col-xs-12 col-md-9 detail__header--container"
  >
    <div
      className="detail__header--image-container"
    >
      <img
        className="detail__header-icon"
        src="/labkey/_images/defaultavatar.png"
      />
    </div>
    <div
      className="detail__header-icon--body-container"
    >
      <h2
        className="no-margin-top detail__header--name"
      >
        Title
      </h2>
      <span
        className="detail__header--desc"
      >
        Reader
      </span>
    </div>
  </div>
  <div
    className="pull-right"
  />
  <div
    className="clearfix"
  />
</div>
`;

exports[`<UserDetailHeader/> optional properties 1`] = `
<div
  className="page-header"
>
  <div
    className="col-xs-12 col-md-9 detail__header--container"
  >
    <div
      className="detail__header--image-container"
    >
      <img
        className="detail__header-icon"
        src="/labkey/_images/defaultavatar.png"
      />
    </div>
    <div
      className="detail__header-icon--body-container"
    >
      <h2
        className="no-margin-top detail__header--name"
      >
        Title (Custom)
      </h2>
      <span
        className="detail__header--desc"
      >
        My custom description
      </span>
    </div>
  </div>
  <div
    className="pull-right"
  >
    <div
      className="detail__header--desc"
    >
      <i
        className="fa fa-folder-open"
      />
       
      Container Title
    </div>
    <div
      className="detail__header--desc pull-right"
    >
      Last Login: 
      2019-11-15
    </div>
    <div
      className="detail__header--buttons"
    >
      <button
        className="btn btn-default"
        disabled={false}
        type="button"
      >
        Test
      </button>
    </div>
  </div>
  <div
    className="clearfix"
  />
</div>
`;
